# simplepng

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zqc/simplepngencoder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  simple_png_encoder.h
app/src/main/java/com/zqc/simplepngencoder/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/zqc/simplepngencoder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
